--- a/style.css
+++ b/style.css
@@ -51,3 +51,25 @@ body {
     background-color: #6feaf6;
     
 }
+
+.seat.occupied {
+    background-color: #ffffff;
+}
+
+.seat:nth-of-type(3) {
+    margin-left: 18px;
+}
+
+.seat:nth-last-of-type(3) {
+    margin-right: 18px;
+}
+
+.seat:not(.occupied):hover{
+    cursor: pointer;
+    transform: scale(1.4);
+}
+
+.showCase .seat:not(.occupied):hover{
+    cursor: default;
+    transform: scale(1);
+}
